fixed invisible hieght scroll

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -32,6 +32,7 @@ h1 {
   padding-bottom: 95px;
   padding-left: 40px;
   padding-right: 40px;
+  height: fit-content;
   /* padding-top: 55px;
   padding-bottom: 55px; */
 }
